# pet_projects

nfa/: nfa.c
small_projects/frequency_methods_labs/lab_1/: CMakeLists.txt  function.h  test.cpp
small_projects/frequency_methods_labs/lab_1/include/: complex_function.h  constants.h  cube_function.h  function.h  periodic_absolute_value_function.h  square_wave_function.h
small_projects/frequency_methods_labs/lab_1/src/: complex_function.cpp  constants.cpp  cube_function.cpp  main.cpp  periodic_absolute_value_function.cpp  square_wave_function.cpp
small_projects/optimization_methods_labs/lab_1/: gr.cpp
small_projects/optimization_methods_labs/lab_1/src/: main.cpp
zhirkov_low_level_programming_assignments/input_output_library/: input_output_library.asm  test.asm
zhirkov_low_level_programming_assignments/prime_number_checker/: prime_number_checker.c
zhirkov_low_level_programming_assignments/scalar_product/: scalar_product.c
